--- a/templates/index.html
+++ b/templates/index.html
@@ -10,17 +10,19 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- static css -->
     <link rel="stylesheet" href="../static/style.css">
+        <!-- fontawesome -->
+        <script src="https://kit.fontawesome.com/47aea27298.js" crossorigin="anonymous"></script>
     <!-- Link to jQuery  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body style="background-color: #acb;">
     <div class="container">
-        <div class="jumbotron jumbotron-fluid" style="background-color: #acb;">
-            <div class="container">
+        <!-- <div class="jumbotron jumbotron-fluid" style="background-color: #acb;"> -->
+            <div class="container" style="border-bottom: dotted white; padding: 30px 0 10px 0; margin-bottom: 40px;">
                 <h1 class="display-4" style="text-align: center; font-weight: bold; color:white;">Book Reviews!</h1>
             </div>
-        </div>
+        <!-- </div> -->
 
         <!-- ======== ALERT FOR REGISTER SUCCESS ======== -->
 
