--- a/templates/bookreview.html
+++ b/templates/bookreview.html
@@ -11,7 +11,8 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- static css -->
     <link rel="stylesheet" href="../static/style.css">
-
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/47aea27298.js" crossorigin="anonymous"></script>
 
 
     <!-- Link to jQuery  -->
@@ -24,25 +25,22 @@
     <!-- ================= NAV ======================== -->
     <nav id="navbar" class="navbar navbar-dark" style="background-color:#aa9;">
         <span class="navbar-text justify-content-left" style="color: white;">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z" />
-                <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z" />
-            </svg>
+            <i class="fas fa-portrait"></i>
             {{ session['user_alias'] }}
         </span>
 
-        <!-- =================== HOME ROUTE ===================== -->
-        <form action="/booksPage" method="get" class="form-inline justify-content-end">
-            <button class="btn" type="submit" style="color: white;">home</button>
-        </form>
-
-        <!-- =================== LOGOUT ROUTE ===================== -->
-        <form action="/logout" method="post" class="form-inline justify-content-end">
-            <button class="btn" type="submit" style="color: white;">log out</button>
-        </form>
+        <ul class="nav justify-content-end">
+        
+            <!-- ============= HOME ROUTE =============== -->
+            <li class="nav-item">
+                <a class="nav-link" href="/booksPage" style="color: white;">Home <i class="fas fa-home"></i></a>
+            </li>
+        
+            <!-- ============== LOGOUT ROUTE ================ -->
+            <li class="nav-item">
+                <a class="nav-link" href="/logout" style="color: white;">Log out <i class="fas fa-door-open"></i></a>
+            </li>
+        </ul>
     </nav>
 
     <!-- =================================================================================================== -->
@@ -54,32 +52,38 @@
     <div class="container">
 
 
-
-
-        <!---------------------------- book title  ---------------------------->
-
+        <!----- book title  ------->
         <div class="row">
-            <h5>
+            <h2>
                 {{ book.title|capitalize }}
-            </h5>
+            </h2>
         </div>
         <div class="row">
 
             <!-- author  -->
-            <h6>
-                AUTHOR: {{ book.author_name|capitalize }}
-            </h6>
+            <h3>
+                written by: {{ book.author_name|capitalize }}
+            </h3>
 
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 20px;">
             <div class="col-7" style="padding-right: 30px;">
-                <h3 style="border-bottom: solid 2px black;">Reviews:</h3>
+                <h4 style="border-bottom: solid 3px black; margin-bottom: 30px;">Reviews:</h4>
+
+
+                <!-- if there are no reviews:  -->
+                {% if total == 0: %}
+                <div style="font-size:1.5rem; font-style: italic;">
+                    <p>This book doesn't have any reviews</p>
+                    <p>Be the first to add a review on the right!!</p>
+                </div>
+                {% endif %}
+
 
                 <!-- LOOP THROUGH REVIEWS: -->
-                <!-- if it's user's review, add delete button -->
-
                 {% for review in review_results %}
-                <div class="row">
+
+                <div class="row" style="margin: 20px 0;">
                     <div class="col" style="margin-left: 20px; border-bottom: solid 2px black;">
 
                         <!-- rating -->
@@ -87,31 +91,32 @@
 
                         <div>
                             <!-- user alias as a link  -->
-                            <a href="/getUser/{{ review.user_id }}">{{ review.alias|upper }}</a>
+                            <a href="/getUser/{{ review.user_id }}">{{ review.alias|upper }} </a>
 
                             <!-- review content -->
                             {{ review.content }}
                         </div>
 
                         <!-- comment timestamp  -->
-                        <p> {{ review.updated_at }} </p>
+                        <p style="margin: 10px 0;"> {{ review.updated_at }}
 
-                        
-                        <!-- --------------- delete --------------------  -->
-                        {% if review.user_id == session['user_id']: %}
 
-                        <a href="/delete_review/{{ review.book_id }}/{{ review.id }}">DELETE REVIEW</a>
+                            <!-- --------------- delete --------------------  -->
+                            {% if review.user_id == session['user_id']: %}
 
-                        {% endif %}
-                        <!-- -----------------------------------------  -->
+                            <a href="/delete_review/{{ review.book_id }}/{{ review.id }}" class="btn btn-warning"
+                                role="button" style="margin-left: 50px;">DELETE REVIEW</a>
 
+                            {% endif %}
+                            <!-- -----------------------------------------  -->
+                        </p>
                     </div>
                 </div>
                 {% endfor %}
 
             </div>
 
-            <!----------------------- ADD A REVIEW  ------------------------->
+            <!----------------  ADD A REVIEW  ------------------>
             <div class="col-5">
                 <div class="row">
                     <h4>Add a Review:</h4>
@@ -120,14 +125,13 @@
                 <!-- ADD REVIEW ROUTE  -->
                 <form action="/additionalReview/{{ book.id }}" method="post">
 
-
                     <div class="form-group">
                         <textarea name="content" class="form-control" id="content" rows="3"></textarea>
                     </div>
 
                     <!-- rating  -->
                     <div class="form-group row">
-                        <label for="rating" class="col-sm-3 col-form-label">Rating</label>
+                        <label style="font-weight: bold;" for="rating" class="col-sm-3 col-form-label">Rating</label>
                         <div class="col-sm-5">
                             <select name="rating" class="custom-select" id="rating">
                                 <option selected>Choose</option>
@@ -146,13 +150,36 @@
 
                 <!-- flash message  -->
                 <!-- ------------------------------ -->
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                {% for message in messages %}
-                <p style="color: red;">{{message}}</p>
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
+                <div class="container" style="min-height:100%; width:80%">
+                    {% with messages = get_flashed_messages(category_filter=["review-success"]) %}
+                    {% if messages %}
+                    {% for message in messages %}
+
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        <strong>Review Added!</strong>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        {{message}}
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {% endwith %}
+                    {% block body %}{% endblock %}
+                </div>
+
+
+                <!-- flash errors  -->
+                <!-- ------------------------------ -->
+                <div>
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    {% for message in messages %}
+                    <p style="color: red;">{{message}}</p>
+                    {% endfor %}
+                    {% endif %}
+                    {% endwith %}
+                </div>
 
             </div>
         </div>
