--- a/templates/books.html
+++ b/templates/books.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="col">
 
-                        <div class="card"  style="background-color: #fff">
+                        <div class="card" style="background-color: #fff; height: 200px; overflow: auto;">
                             <ul class="list-group list-group-flush">
 
                                 <!-- LOOP FOR ALL BOOKS IN DATABASE  -->
