--- a/templates/users.html
+++ b/templates/users.html
@@ -32,7 +32,8 @@
 
             <!-- ======== ADD BOOKS AND REVIEW ROUTE ========= -->
             <li class="nav-item">
-                <a class="nav-link" href="/addPage" style="color: white;">Add Book & Review <i class="fas fa-pencil-alt"></i></a>
+                <a class="nav-link" href="/addPage" style="color: white;">Add Book & Review <i
+                        class="fas fa-pencil-alt"></i></a>
             </li>
 
             <!-- ============= HOME ROUTE =============== -->
@@ -56,12 +57,12 @@
         <div class="row">
 
             <!----------------------- LEFT SIDE ---------------------->
-            <div class="col">
+            <div class="col" style="margin-left: 30px;">
                 <div class="row">
                     <div class="col">
 
                         <!-- user alias -->
-                        <h6>User Alias: {{ user_results[0].alias }}</h6>
+                        <h4>User Alias: {{ user_results[0].alias }}</h4>
                     </div>
                 </div>
 
@@ -69,7 +70,7 @@
                     <div class="col">
 
                         <!-- user name  -->
-                        <h6>Name: {{ user_results[0].name }}</h6>
+                        <h4>Name: {{ user_results[0].name }}</h4>
                     </div>
                 </div>
 
@@ -77,7 +78,7 @@
                     <div class="col">
 
                         <!-- user email  -->
-                        <h6>Email: {{ user_results[0].email }} </h6>
+                        <h4>Email: {{ user_results[0].email }} </h4>
                     </div>
                 </div>
 
@@ -85,7 +86,7 @@
                     <div class="col">
 
                         <!-- user total reviews -->
-                        <h6>Total Reviews: {{ count_results[0].count }}</h6>
+                        <h5>Total Reviews: {{ count_results[0].count }}</h5>
                     </div>
                 </div>
             </div>
@@ -94,28 +95,30 @@
 
             <div class="col">
                 <div class="row">
+                    <h5>Posted Reviews on the following books:</h5>
                     <div class="col">
-                        <h5>Posted Reviews on the following books:</h5>
+                        
+                        <!-- style for scroll on list  -->
+                        <div
+                            style="margin-top: 20px; height: 300px; width: 300px; overflow-y: auto; overflow-x: hidden;">
 
-                        <!-- LOOP for all reviews by user: -->
-                        {% for review in review_results %}
-                        <div class="row">
-                            <div class="col">
+                            <!-- LOOP for all reviews by user: -->
+                            {% for review in review_results %}
+                            <div class="row">
+                                <div class="col" style="margin-left: 40px;">
 
-                                <!-- each review title is a link  -->
-                                <a href="/get_book_review/{{ review.book_id }}">
-                                    <h6>{{ review.title|capitalize }}</h6>
-                                </a>
+                                    <!-- each review title is a link  -->
+                                    <a href="/get_book_review/{{ review.book_id }}">
+                                        <h6>{{ review.title|capitalize }}</h6>
+                                    </a>
+                                </div>
                             </div>
+                            {% endfor %}
                         </div>
-                        {% endfor %}
-
                     </div>
                 </div>
-
             </div>
         </div>
-
 
 
     </div>
