changed star images to be icons and delete button to be trash icon

--- a/templates/add.html
+++ b/templates/add.html
@@ -184,13 +184,15 @@
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
                             </select>
                         </div>
                     </div>
 
                     <!-- submit button  -->
                     <div class="form-group row justify-content-end">
-                        <button type="submit" class="btn btn-primary">Add Review</button>
+                        <button type="submit" class="btn btn-dark">Add Review</button>
                     </div>
 
                 </form>
