--- a/templates/index.html
+++ b/templates/index.html
@@ -131,12 +131,12 @@
                         <input name="confirm-password" type="password" class="form-control" id="confirm-password">
                     </div>
 
-                    <button type="submit" class="btn btn-success" id="bttnSubmit">Register!</button>
+                    <button type="submit" class="btn btn-dark" id="bttnSubmit">Register!</button>
                 </form>
             </div>
 
             <!-- =============== LOGIN COLUMN ================ -->
-            <div class="col" style="margin-left:15px; padding: 30px; background-color: #ded;">
+            <div class="col" style="margin-left:15px; padding: 30px; background-color: #ded; height: min-content;">
                 <h2>Login here!</h2>
                 <form action="/login" method="post">
 
@@ -159,7 +159,7 @@
                         {% endif %}
                         {% endwith %}
                     </div>
-                    <button type="submit" class="btn btn-success" id="bttnSubmit">Login!</button>
+                    <button type="submit" class="btn btn-dark" id="bttnSubmit">Login!</button>
                 </form>
             </div>
         </div>
