--- a/templates/bookreview.html
+++ b/templates/bookreview.html
@@ -106,58 +106,56 @@
 
 
                             {% if review.rating == '1' %}
-                            <!-- <img src=' {{ image }} ''> -->
-                            <img src="../static/filled_star.jpg"><img src="../static/white_star.jpg"><img
-                                src="../static/white_star.jpg"><img src="../static/white_star.jpg"><img
-                                src="../static/white_star.jpg">
+                            <i class="material-icons">star</i><i class="material-icons">star_outline</i><i
+                                class="material-icons">star_outline</i><i class="material-icons">star_outline</i><i
+                                class="material-icons">star_outline</i>
                             {% endif %}
 
                             {% if review.rating == '2' %}
-                            <img src="../static/filled_star.jpg"><img src="../static/filled_star.jpg"><img
-                                src="../static/white_star.jpg"><img src="../static/white_star.jpg"><img
-                                src="../static/white_star.jpg">
+                            <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                class="material-icons">star_outline</i><i class="material-icons">star_outline</i><i
+                                class="material-icons">star_outline</i>
                             {% endif %}
 
                             {% if review.rating == '3' %}
-                            <img src="../static/filled_star.jpg"><img src="../static/filled_star.jpg"><img
-                                src="../static/filled_star.jpg"><img src="../static/white_star.jpg"><img
-                                src="../static/white_star.jpg">
+                            <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                class="material-icons">star</i><i class="material-icons">star_outline</i><i
+                                class="material-icons">star_outline</i>
                             {% endif %}
 
                             {% if review.rating == '4' %}
-                            <img src="../static/filled_star.jpg"><img src="../static/filled_star.jpg"><img
-                                src="../static/filled_star.jpg"><img src="../static/filled_star.jpg"><img
-                                src="../static/white_star.jpg">
+                            <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                class="material-icons">star</i><i class="material-icons">star</i><i
+                                class="material-icons">star_outline</i>
                             {% endif %}
 
                             {% if review.rating == '5' %}
-                            <img src="../static/filled_star.jpg"><img src="../static/filled_star.jpg"><img
-                                src="../static/filled_star.jpg"><img src="../static/filled_star.jpg"><img
-                                src="../static/filled_star.jpg">
+                            <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                class="material-icons">star</i><i class="material-icons">star</i><i
+                                class="material-icons">star</i>
                             {% endif %}
-
-
-
-
 
                         </div>
 
-                        <div class="row">
-                            <div class="col">
-                                <!-- comment timestamp  -->
-                                <p style="margin: 10px 0;"> {{ review.updated_at }} </p>
+                        
+                        <div class="row" style="margin: 10px 0; justify-content: space-between;">
+              
 
-                            </div>
+                                <div >
+                                    <!-- comment timestamp  -->
+                                    <p > {{ review.updated_at }} </p>
+                                </div>
 
-                            <!-- --------------- delete --------------------  -->
-                            {% if review.user_id == session['user_id']: %}
-                            <div class="col">
-                                <a href="/delete_review/{{ review.book_id }}/{{ review.id }}" class="btn btn-warning"
-                                    role="button" style="margin-left: 70px;">DELETE REVIEW</a>
-                            </div>"
-
-
-                            {% endif %}
+                                <!-- --------------- delete --------------------  -->
+                                {% if review.user_id == session['user_id']: %}
+                                <div>
+                                    <a href="/delete_review/{{ review.book_id }}/{{ review.id }}" role="button">
+                                        <span class="material-icons">
+                                            delete_outline
+                                        </span></a>
+                                </div>
+                                {% endif %}
+                          
                             <!-- -----------------------------------------  -->
                         </div>
                     </div>
@@ -176,7 +174,8 @@
                 <form action="/additionalReview/{{ book.id }}" method="post">
 
                     <div class="form-group">
-                        <textarea name="content" class="form-control" id="content" rows="3"></textarea>
+                        <textarea name="content" class="form-control" id="content" rows="3"
+                            style="resize: none;"></textarea>
                     </div>
 
                     <!-- rating  -->
@@ -188,13 +187,15 @@
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
                             </select>
                         </div>
                     </div>
 
                     <!-- submit button  -->
                     <div class="form-group row justify-content-end">
-                        <button type="submit" class="btn btn-primary">Submit Review</button>
+                        <button type="submit" class="btn btn-dark">Submit Review</button>
                     </div>
                 </form>
 
