--- a/templates/books.html
+++ b/templates/books.html
@@ -39,7 +39,10 @@
 
             <!-- ============== LOGOUT ROUTE ================ -->
             <li class="nav-item">
-                <a class="nav-link" href="/logout" style="color: white;">Log out <i class="fas fa-door-open"></i></a>
+                <form action="/logout" method="post">
+                    <button type="submit" class="btn btn-Link" style="color: white;">Log out <i style="color: white;"
+                            class="fas fa-door-open"></i></button>
+                </form>
             </li>
         </ul>
     </nav>
