--- a/static/style.css
+++ b/static/style.css
@@ -12,3 +12,14 @@ body {
 .addBookLabel {
     font-weight: bold;
 }
+
+#deleteImg {
+     font-size: 15px;
+     background-color: transparent;
+     margin-right: 1rem;
+     transition: 0.1s;
+}
+
+#deleteImg:hover {
+     color: red;
+}
